--- a/src/app/tutorials/download-install/download-install.component.html
+++ b/src/app/tutorials/download-install/download-install.component.html
@@ -182,7 +182,7 @@ so SendBlaster can be installed. Wait for a few seconds...
     <div style="overflow: hidden;">   
         <ul>
             <li><a class="font-weight-bold" routerLink = "/tutorials/register-sendblaster-free">Registering your SendBlaster Installation (Free Edition)</a></li>
-            <li><a class="font-weight-bold" (click)="scroll(Install)">Sending your first email</a></li>
+            <li><a class="font-weight-bold" routerLink = "/tutorials/sending-your-first-newsletter">Sending your first email</a></li>
         </ul>
 </div>
 </div>
