--- a/src/app/tutorials/register/register.component.html
+++ b/src/app/tutorials/register/register.component.html
@@ -27,14 +27,19 @@
   You will then receive an email containing important information, and of course your Free License details that would look like:
 </p>
 <p>
-    <b>E-mail</b>: <i>registered.user@gmail.com</i><br/>
-    <b>Registration code</b>: <i>75FA-563E-3573-6E67-8FF5</i>  
+    <img class="screenshotcentered" src="./assets/img/register-free/registration-mail.png" alt="SendBlaster Free License Email">    
 </p>
+<p class="info clearfix">
+    <span class="font-weight-bold">Note:</span> If you do not receive your Free license email, check on the spam box, just in case. 
+    You may also want to whitelist email address register@sendblaster.com.<br/>
+    If you still have problems getting your Free license, please 
+    <a class="font-weight-bold" target="_blank" href="https://www.sendblaster.com/services/support/ticketing/system/?lang=en" title="Submit Trouble Ticket">Submit a trouble ticket</a>.
+  </p>
  </div>
 
 <div class="inner-content main-title clearfix">
     <h2>
-        Inserting Your Free License Details In SendBlaster
+        Showing the License Details window
     </h2>
 <img class="screenshot" src="./assets/img/register-free/sendblaster-free-splash.png" alt="Inserting Free License Details in Splash Screen">    
 <p>
@@ -44,101 +49,36 @@ Every time SendBlaster starts, it shows a splash screen while it´s being initia
 
 <div class="inner-content main-title clearfix">
     <h2>
-        SendBlaster License Agreement
+        Inserting Free License Details in SendBlaster
     </h2>
 <div style="overflow: hidden;">
-<img class="screenshot" src="./assets/img/download-install/sendblaster-license-agreement.png" alt="SendBlaster Liceense Agreement.">    
+<img class="screenshot" src="./assets/img/register-free/registration-window.png" alt="SendBlaster Liceense Agreement.">    
 <p>
-    Before you can use SendBlaster, you´re required to understand and accept SendBlaster License Agreement.
+    In this screen, you need to enter your Free license details that have been sent to you via email.
 </p>
 <p>
-    In short, SendBlaster is owned by Delivery Tech Corp and protected by copyright laws and international copyright treaties, 
-    as well as other intellectual property laws and treaties. 
-</p>
-<p>
-    We suggest you read the complete License Agreement, it´s not long.
-</p>
-<p>
-    After you´re done reading, please make sure you select the <em><b>"I accept the terms in the license agreement"</b></em> option,
-    and hit <em><b>"Next"</b></em> button.
+    <span class=field>Email address used for registration</span>: Enter the email address you used to register your SendBlaster Free License
+    <br/>
+    <span class=field>License Key</span>: Enter your Free License key. License key is a string of 5 sets of 4 numbers/letters, ie: 8685-686A-4862-7772-7C41
 </p>
 </div>
 <p class="info clearfix">
-    <span class="font-weight-bold">Note:</span> You will allways be able to find the last updated version of SendBlaster License Agreement
-    at: <a href="https://www.sendblaster.com/sendblaster-license-agreement/" title="SendBlaster License Agreement"><b>SendBlaster License Agreement</b></a>.
+    <span class="font-weight-bold">Note:</span> It´s highly suggested that you copy/paste details from the registration email into the License window
+    instead of typing this details, in order to avoid any typo.
+    If the <em><b>"Ok"</b></em> button does not get enabled, it means that the license details are incorrect.
   </p>
 </div>
 
 <div class="inner-content main-title clearfix">
     <h2>
-        Customer Information
+        Verifying Registration
     </h2>
     <div style="overflow: hidden;">   
-    <img class="screenshot" src="./assets/img/download-install/sendblaster-customer-information.png" alt="Customer Information">
+    <img class="screenshot" src="./assets/img/register-free/sendblaster-registered-free.png" alt="Verifying SendBlaster Registration">
     <p>
-        This step will let you specify your <em><b>"user name"</b></em> and <em><b>"organization"</b></em>, when available this details will be retrived from your windows installation. You may specify any details here, SendBlaster will not actually make use of this information.  
+        Verify that your Free License details appear in SendBlaster Splash screen. Now, you´re ready to go!
     </p>
-    <p>
-        You will also be required to specify wether SendBlaster will be available for <em><b>"Anyone who uses this computer"</b></em> or <em><b>"Only for me"</b></em>. If there are several windows user accounts created in your computer, and you select the first option, then all windows users will be able to use SendBlaster, on the other hand, if you select the second option, only you will be able to use SendBlaster.
-    </p>
-</div>
-<p class="clearfix">   
-    After you´re done setting required information, hit <em><b>"Next"</b></em> button.
-</p>
-<p class="info clearfix">
-    <span class="font-weight-bold">Note:</span> If you have several windows user accounts and you want to provide access to SendBlaster to more than one windows account, but not <em><b>"Anyone who uses this computer"</b></em> select <em><b>"Only for me"</b></em> option, and repeat the entire installation process under each windows user account where you want to provide access to SendBlaster.
-</p>
-<p class="info clearfix">
-    <span class="font-weight-bold">Note:</span> While it´s possible to install SendBlaster under more than one windows user account, each installation will be treated as an independant installation, ie: if there´s a windows account named Joe, and another windows account namde Jane, then Joe and Jane will not share contact lists or any other SendBlaster data, each user will have a completly different set of user data.
-</p>
-</div>
-
-<div class="inner-content main-title clearfix">
-    <h2>
-        Install Folder
-    </h2>
-    <div style="overflow: hidden;">   
-    <img class="screenshot" src="./assets/img/download-install/sendblaster-install-folder.png" alt="SendBlaster Install Folder">
-    <p>
-        By default, SendBlaster will be installed under <em><b>"C:\Program Files (x86)\SendBlaster4"</b></em>, however you may decide to change it.
-    </p>
-    <p>
-        We advice you leave it to the default value, but if for any reason you need to change the installation folder, make sure you specify an install folder that resides on a non-removable disk!
-    </p>
-    <p>   
-        After you´re done setting selecting desired installation folder, hit <em><b>"Next"</b></em> button.
-    </p>
-</div>
-</div>
-
-<div class="inner-content main-title clearfix">
-    <h2>
-        Install Process
-    </h2>
-    <div style="overflow: hidden;">   
-    <img class="screenshot" src="./assets/img/download-install/sendblaster-wizard-installing.png" alt="SendBlaster Install Folder">
-    <p>
-        This step will install SendBlaster according to the information provided in previous steps, the installer will copy files to your computer.
-    </p>
-    <p>   
-        After installation finishes, hit <em><b>"Next"</b></em> button.
-    </p>
-</div>
-</div>
-
-<div class="inner-content main-title clearfix">
-    <h2>
-        Finishing Installation
-    </h2>
-    <div style="overflow: hidden;">   
-    <img class="screenshot" src="./assets/img/download-install/sendblaster-installation-completed.png" alt="SendBlaster Install Folder">
-    <p>
-        <b>Congratulations!</b> This screen confirms that SendBlaster has been sucessfully installed on your computer.
-    </p>
-    <p>   
-        Hit <em><b>"Finish"</b></em> button to close the install wizard.
-    </p>
-</div>
+    </div>
 </div>
 
 <div class="inner-content main-title clearfix">
@@ -147,18 +87,17 @@ Every time SendBlaster starts, it shows a splash screen while it´s being initia
     </h2>
     <div style="overflow: hidden;">   
         <ul>
-            <li><a class="font-weight-bold" routerLink = "/tutorials/register">Registering your SendBlaster Installation (Free or Pro Editions)</a></li>
-            <li><a class="font-weight-bold" (click)="scroll(Install)">Sending your first email</a></li>
+            <li><a class="font-weight-bold" routerLink = "/tutorials/sending-your-first-newsletter">Sending your first email</a></li>
         </ul>
 </div>
 </div>
 
 <div #TroubleShooting class="inner-content main-title clearfix">
     <h2>
-        Troubleshooting SendBlaster Installation
+        Troubleshooting SendBlaster Free Registration
     </h2>
 <p>
-If you face any problem during SendBlaster installation, or you have any question related to installing SendBlaster, please submit a <b>Trouble Ticket</b> by using the bellow button:
+If you face any problem during SendBlaster Free Registration, or you have any question related to this process, please submit a <b>Trouble Ticket</b> by using the bellow button:
 </p>
 <p style="text-align: center; "><a target="_blank" href="https://www.sendblaster.com/services/support/ticketing/system/?lang=en" title="Submit Trouble Ticket" class="submit-ticket">Submit Trouble Ticket</a></p> 
 </div>
