--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -171,8 +171,21 @@ img.screenshot{
     margin: 0 20px 20px 0;
 }
 
+img.screenshotcentered{
+    margin: 0 auto;
+    border-style: solid;
+    border-width: 1px;
+    display: table;
+}
+
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
+}
+
+.field{
+    font-weight: bold;
+    font-style: italic;
+    color: #ff6600;
 }
